# fr-rust

./: .env.example  .gitignore  Cargo.toml  DOCUMENTATION.md  LICENSE  README.md  ai.txt  doc.md  err.rs  run.sh
.github/workflows/: codeql.yml  main.yml  publish.yml
src/: clean.rs  config.rs  crypto.rs  db.rs  email.rs  example.rs  lib.rs  main.rs  otp.rs  redis.rs  res.rs  server.rs  url.rs  utils.rs  ws.rs
src/clean/: mod.rs
src/crypto/: crypto.rs  mod.rs
src/db/: db.rs  mod.rs
src/ddos/: ddos.rs  mod.rs
src/email/: email.rs  mod.rs
src/jwt/: jwt.rs  mod.rs
src/linkv/: linkv.rs  mod.rs
src/macros/: error.rs
src/otp/: mod.rs  otp.rs
src/redis/: mod.rs  redis.rs
src/req/: req.rs
src/res/: mod.rs  res.rs
src/routes/: routes.rs
src/server/: mod.rs  run.rs  server.rs
src/types/: mod.rs  res.rs  types.rs
src/utils/: config.rs  index_file.rs  mod.rs  utils.rs
src/ws/: batcher.rs  mod.rs  ws.rs
static/: index.html
